# lazarus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_SCRIPTS_SUMMARY.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  NOTIFICATION_IMPLEMENTATION.md  PROJECT_INSTRUCTIONS.md  QUICK_START.md  README.md  SECURITY.md  TASKS.md  TESTING.md  TEST_SUITE_SUMMARY.md  conftest.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  example-integration.yaml
config/: lazarus.full.yaml  lazarus.minimal.yaml  lazarus.schema.json
docs/: DECISIONS.md  architecture.md  claude-integration.md  cli-reference.md  configuration.md  examples.md  faq.md  getting-started.md  git-integration.md  github-actions.md  healing-loop.md  quickstart-pr-creation.md  security.md  self-hosted-runner.md  troubleshooting.md
docs/architecture/: context-system.md
docs/development/: IMPROVEMENTS.md  PR_CREATION_IMPLEMENTATION.md  WORKFLOW_SUMMARY.md
examples/: .examples-tree.txt  EXAMPLES_SUMMARY.md  QUICKSTART.md  README.md  lazarus-example.yaml  notification_example.py  pr_creation_example.py
examples/api-change-simulation/: README.md  api_module.py  fetch_data.py  lazarus.yaml
examples/api-change-simulation/fixed/: api_module.py  fetch_data.py
examples/multi-file-fix/: README.md  lazarus.yaml  main.py
examples/multi-file-fix/fixed/: main.py
examples/multi-file-fix/utils/: __init__.py  helpers.py
examples/nodejs-runtime-error/: README.md  app.js  lazarus.yaml  package.json
examples/nodejs-runtime-error/fixed/: app.js
examples/python-syntax-error/: README.md  lazarus.yaml  script.py
examples/python-syntax-error/fixed/: script.py
examples/shell-typo/: README.md  backup.sh  lazarus.yaml
examples/shell-typo/fixed/: backup.sh
examples/unfixable-scenario/: README.md  impossible.py  lazarus.yaml
examples/unfixable-scenario/fixed/: README.md
runner-setup/: README.md
runner-setup/docs/: linux-guide.md  macos-guide.md
runner-setup/scripts/: check-runner-health.sh  configure-launchd.sh  configure-systemd.sh  install-runner.sh  update-runner.sh
scripts/: README.md  install.sh  setup-workflows.sh  uninstall.sh  update.sh
src/lazarus/: __init__.py  __main__.py  cli.py
src/lazarus/claude/: __init__.py  client.py  parser.py  prompts.py
src/lazarus/config/: __init__.py  loader.py  schema.py
src/lazarus/core/: __init__.py  context.py  healer.py  loop.py  runner.py  truncation.py  verification.py
src/lazarus/git/: __init__.py  operations.py  pr.py
src/lazarus/logging/: README.md  __init__.py  formatters.py  history.py  logger.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_e2e.py
tests/integration/: __init__.py  test_cli_integration.py  test_healing_flow.py
tests/unit/: __init__.py  test_claude_client.py  test_claude_parser.py  test_claude_prompts.py  test_cli.py  test_config.py  test_context.py  test_git_operations.py  test_healer.py  test_history.py  test_logger.py  test_loop.py  test_notifications.py  test_pr_creator.py  test_redactor.py  test_runner.py  test_truncation.py  test_verification.py
workflows/: example-integration.yaml  lazarus-manual.yaml  lazarus-on-failure.yaml  lazarus-scheduled.yaml
(+13 files in other folders)
